Home page completed except the content sections

--- a/project/templates/index.html
+++ b/project/templates/index.html
@@ -147,7 +147,7 @@
                     style="height: 573px; width: 573px;"
                   />
                   <div class="offer-banner" data-animation="fadeInRight">
-                    <img src="{% static 'img/bg/pure-veg.png' %}" alt="header-img" style="height: 200px; width: 200px; transform: rotate(-30deg);" />
+                    <img src="{% static 'img/bg/veg2.png' %}" alt="header-img" style="height: 200px; width: 200px; transform: rotate(-30deg);" />
                   </div>
 
                   <div class="overly-text">TOMATO PIZZA</div>
@@ -189,7 +189,7 @@
                     style="height: 573px; width: 573px;"
                   />
                   <div class="offer-banner" data-animation="fadeInRight">
-                    <img src="{% static 'img/bg/pure-veg.png' %}" alt="header-img" style="height: 200px; width: 200px; transform: rotate(-30deg);" />
+                    <img src="{% static 'img/bg/veg2.png' %}" alt="header-img" style="height: 200px; width: 200px; transform: rotate(-30deg);" />
                   </div>
 
                   <div class="overly-text">VEG MOMO</div>
@@ -231,7 +231,7 @@
                     style="height: 573px; width: 573px;"
                   />
                   <div class="offer-banner" data-animation="fadeInRight">
-                    <img src="{% static 'img/bg/pure-veg.png' %}" alt="header-img" style="height: 200px; width: 200px; transform: rotate(-30deg);" />
+                    <img src="{% static 'img/bg/veg2.png' %}" alt="header-img" style="height: 200px; width: 200px; transform: rotate(-30deg);" />
                   </div>
 
                   <div class="overly-text">GOBI MANCHURIAN</div>
@@ -273,7 +273,7 @@
                     style="height: 573px; width: 573px;"
                   />
                   <div class="offer-banner" data-animation="fadeInRight">
-                    <img src="{% static 'img/bg/pure-veg.png' %}" alt="header-img" style="height: 200px; width: 200px; transform: rotate(-30deg);" />
+                    <img src="{% static 'img/bg/veg2.png' %}" alt="header-img" style="height: 200px; width: 200px; transform: rotate(-30deg);" />
                   </div>
 
                   <div class="overly-text">PANEER-BUTTER MASALA</div>
